fix content index.html

--- a/index.html
+++ b/index.html
@@ -4,27 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>MyTask</title>
+    <title>Sakti-Fahri TodoList</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
 
   <body>
-    <div class="logo">
-      <img src="./assets/logo.png" />
+    <header></header>
+    <main>
+<img src="./assets/logo.png" />
+
+<div id="container" class="container">
+  <div class="login">
+    <h3>Let's get going</h3>
+    <div>
+      <input class="input-label" type="email" placeholder="email" />
     </div>
-    <div id="container" class="container">
-      <div class="login">
-        <h3>Let's get going</h3>
-        <div>
-          <input class="input-label" type="email" placeholder="email" />
-        </div>
-        <div>
-          <input class="input-label" type="password" placeholder="password" />
-          <div>
-            <input class="input-button-label" type="button" value="Login" />
-          </div>
-        </div>
+    <div>
+      <input class="input-label" type="password" placeholder="password" />
+      <div class="button-signin">
+        <input class="input-button-label" type="button" value="Login" />
       </div>
+    </div>
+  </div>
+    </main>
+    <footer>
+
+    </footer>
+    
     </div>
     <script src="index.js"></script>
   </body>
