add login function and gitignore file

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <div class="login">
     <h3>Let's get going</h3>
     <div>
-      <input class="input-label" type="email" placeholder="email" />
+      <input id="signinForm" class="input-label" type="email" placeholder="email" />
     </div>
     <div>
-      <input class="input-label" type="password" placeholder="password" />
+      <input id="passwordForm" class="input-label" type="password" placeholder="password" />
       <div class="button-signin">
-        <input class="input-button-label" type="button" value="Login" />
+        <input class="input-button-label" type="button" value="Login" onclick="login()" />
       </div>
     </div>
   </div>
