styling app content

--- a/app.html
+++ b/app.html
@@ -28,7 +28,12 @@
           <div class="todoTitle">
             <input type="text" id="todoTitle" placeholder="Title..." />
           </div>
-          <input type="text" id="myInput" placeholder="List item..." />
+          <input
+            type="text"
+            id="myInput"
+            class="myInput"
+            placeholder="List item..."
+          />
           <button class="addBtn" typ="submit">Add</button>
         </form>
 
