--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   </head>
 
   <body>
-    <header></header>
+    
     <main>
+      <!-- IMAGE OF LOGO -->
 <img src="./assets/logo.png" />
 
 <div id="container" class="container">
+
+  <!-- LOGIN SECTION -->
   <div class="login">
     <h3>Let's get going</h3>
     <div>
@@ -27,11 +30,8 @@
     </div>
   </div>
     </main>
-    <footer>
-
-    </footer>
     
-    </div>
+   
     <script src="index.js"></script>
   </body>
 </html>
